# querynomicon

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  common.mk  pyproject.toml
01_intro/: index.md
02_core/: index.md
03_tools/: index.md
04_python/: index.md
05_advanced/: index.md
06_r/: index.md
07_psql/: index.md
_extras/: links.md  words.txt
db/: assays.db  contact_tracing.db  lab_log.db  penguins.db
docs/: index.html
docs/01_intro/: index.html
docs/02_core/: index.html
docs/03_tools/: index.html
docs/04_python/: index.html
docs/05_advanced/: index.html
docs/06_r/: index.html
docs/07_psql/: index.html
docs/08_finale/: index.html
docs/bibliography/: index.html
docs/conduct/: index.html
docs/contrib/: index.html
docs/contributing/: index.html
docs/glossary/: index.html
docs/license/: index.html
templates/: page.html
