[project]
name = "querynonomicon"
description = "databases and SQL for research programmers"
version = "0.3.0"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-sqlite",
    "duckdb",
    "click",
    "faker",
    "jupysql",
    "jupyter",
    "mccole",
    "pandas",
    "polars",
    "pyarrow",
    "pypika",
    "ruff",
    "sqlmodel",
    "sqlparse"
]

[tool.mccole]
skips = [
    "*~",
    "*.mk",
    "*.out",
    "*.py",
    "*.r",
    "*.Rmd",
    "*.Rproj",
    "*.sh",
    "*.sql",
    "*.tbl",
    "*.text",
    "bin/**",
    "db/**",
    "extras/**",
    "uv.lock"
]

[tool.mccole.renames]
"README.md" = ""
"CODE_OF_CONDUCT.md" = "conduct"
"CONTRIBUTING.md" = "contrib"
"LICENSE.md" = "license"
