[project]
name = "querynonomicon"
description = "databases and SQL for research programmers"
version = "0.4.0"
requires-python = ">=3.12"
dependencies = [
    "adbc-driver-sqlite",
    "click",
    "faker",
    "jupysql",
    "jupyter",
    "mccole>=2.13.1",
    "pandas",
    "polars",
    "pyarrow",
    "pypika",
    "ruff",
    "sqlmodel",
    "sqlparse"
]

[tool.mccole]
skips = [
    "*~",
    "*.mk",
    "*.out",
    "*.py",
    "*.r",
    "*.Rmd",
    "*.Rproj",
    "*.sh",
    "*.sql",
    "*.tbl",
    "*.text",
    "bin/**",
    "db/**",
    "docs/**",
    "uv.lock"
]

[tool.mccole.renames]
"README.md" = ""
"CODE_OF_CONDUCT.md" = "conduct"
"CONTRIBUTING.md" = "contrib"
"LICENSE.md" = "license"
